fix altezze e calc per overflow

--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ label{
     display: flex;
     flex-direction: column;
     flex-shrink: 0;
-    height: calc(100vh - 260px) ;
+    height: calc(100% - 235px) ;
     overflow: auto;
 }
 
@@ -206,13 +206,13 @@ label{
 }
 
 .message__exchange{
-    height: 100%;
+    height: calc(100% - 65px);
     background-image: url('../img/mine.jpg');
     
 }
 
 .message__wrapper{
-    height: calc(100% - 80px);
+    height: calc(100% - 65px);
     padding: 20px;
     overflow: auto;
 }
